--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "typestyle": "^2.0.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
