--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "^1.1.0",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-redux": "^5.0.7",
     "recompose": "^0.27.1",
-    "redux": "^4.0.0",
     "typestyle": "^2.0.1"
   },
   "devDependencies": {
