--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@material-ui/icons": "^1.1.0",
     "mobx": "^4.3.0",
     "mobx-react": "^5.1.2",
+    "moment": "^2.22.1",
     "react": "^16.4.0",
+    "react-big-calendar": "^0.19.1",
     "react-dom": "^16.4.0",
     "recompose": "^0.27.1",
     "typestyle": "^2.0.1"
@@ -21,6 +23,7 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.3",
     "@types/react": "^16.3.14",
+    "@types/react-big-calendar": "^0.18.0",
     "@types/react-dom": "^16.0.5",
     "react-scripts-ts": "2.16.0",
     "typescript": "^2.8.3"
