--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-big-calendar": "^0.19.1",
     "react-dom": "^16.4.0",
     "recompose": "^0.27.1",
-    "typestyle": "^2.0.1"
+    "typestyle": "^2.0.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
@@ -25,6 +26,7 @@
     "@types/react": "^16.3.14",
     "@types/react-big-calendar": "^0.18.0",
     "@types/react-dom": "^16.0.5",
+    "@types/uuid": "^3.4.3",
     "react-scripts-ts": "2.16.0",
     "typescript": "^2.8.3"
   },
