--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "^1.1.0",
+    "lodash": "^4.17.10",
+    "material-ui-pickers": "^1.0.0-rc.9",
     "mobx": "^4.3.0",
     "mobx-react": "^5.1.2",
     "moment": "^2.22.1",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/lodash": "^4.14.109",
     "@types/node": "^10.1.3",
     "@types/react": "^16.3.14",
     "@types/react-big-calendar": "^0.18.0",
